--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -37,6 +37,27 @@
             },
             "outputs": [],
             "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Design Decisions for weekly hospital stats table:\n",
+                "\n",
+                "- **Primary Key (`hospital_pk`, `collection_week`)**:\n",
+                "    - Uses both `hospital_pk` and `collection_week` to ensure that each hospital's data for a specific week is unique.\n",
+                "- **Foreign Key (`hospital_pk`)**:\n",
+                "    - References the `hospital` table's primary key to link each record to a specific hospital.\n",
+                "- **Data Types**:\n",
+                "    - `hospital_pk` is defined as `CHAR(6)` to match with the expected hospital id length.\n",
+                "    - `collection_week` is a `TIMESTAMP` to capture weekly data.\n",
+                "    - Other columns use the `NUMERIC` type to accommodate average values (numeric and not integer as averages might be fractional).\n",
+                "- **Columns**:\n",
+                "    - Only variables relevant to weekly hospital statistics have been retained in the table to ensure it is mutually exclusive from the other tables except the identifier columns."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "a34b19ac-2465-44f2-9bf9-fc662def4225"
+            },
+            "attachments": {}
         }
     ]
 }
