--- a/Initial Schemas.ipynb
+++ b/Initial Schemas.ipynb
@@ -16,7 +16,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "Hospital Quality Table"
+                "Hospital quality Table"
             ],
             "metadata": {
                 "azdata_cell_guid": "b93c1ee1-19a9-4c2f-89a2-6b3512ad79a2"
